--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "main": "src/server.ts",
   "license": "MIT",
+  "engines": {
+    "node": ">=14.17.3"
+  },
   "scripts": {
     "dev": "nodemon src/server.ts",
     "dev:https": "nodemon src/server.ts --key sslcert/server.key --cert sslcert/server.cert",
-    "start": "node src/server.ts",
+    "start": "ts-node src/server.ts",
     "build": "npm run clean && cp -r src dist/src && cp -r bin dist/bin && cp *.yml dist && cp *.yaml dist && cp *.json dist && cp README.md dist && cp LICENSE dist",
     "clean": "rimraf dist && mkdirp dist"
   },
@@ -36,7 +39,6 @@
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "mkdirp": "^2.1.5",
