--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -31,7 +31,7 @@ jobs:
         gcloud auth configure-docker --quiet
         gcloud auth configure-docker us-west2-docker.pkg.dev --quiet
     - name: Login Docker
-      run: docker login -u _json_key -p ${{ secrets.SERVICE_ACCOUNT_KEY }}
+      run: cat ${{ secrets.SERVICE_ACCOUNT_KEY }} | docker login --username _json_key --password-stdin
     - name: Push Docker Image to Container Registry (GCR)
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
