--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -13,6 +13,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Google Auth
+      id: auth
+      uses: 'google-github-actions/auth@v0'
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
     - uses: google-github-actions/setup-gcloud@main
       with:
         service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
