--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -11,13 +11,13 @@ jobs:
       PROJECT_ID: suspicious-project-381323
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - uses: google-github-actions/setup-gcloud@main
-      with:
-        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-        project_id: ${{ env.PROJECT_ID }}
-        export_default_credentials: true
+    # - uses: google-github-actions/setup-gcloud@main
+    #   with:
+    #     service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+    #     project_id: ${{ env.PROJECT_ID }}
+    #     export_default_credentials: true
 
     - name: Google Auth
       id: auth
