--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -23,7 +23,9 @@ jobs:
       id: auth
       uses: 'google-github-actions/auth@v1'
       with:
-        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+        workload_identity_provider: 'projects/239023152296/locations/global/workloadIdentityPools/github-actions-wif'
+        service_account: 'github-actions@suspicious-project-381323.iam.gserviceaccount.com'
+
 
     - name: Build Docker Image
       run: docker build -t $IMAGE_NAME:latest .
