--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -13,19 +13,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # - uses: google-github-actions/setup-gcloud@main
-    #   with:
-    #     service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-    #     project_id: ${{ env.PROJECT_ID }}
-    #     export_default_credentials: true
-
-    - name: Google Auth
-      id: auth
-      uses: 'google-github-actions/auth@v1'
+    - uses: google-github-actions/setup-gcloud@main
       with:
-        workload_identity_provider: 'projects/239023152296/locations/global/workloadIdentityPools/github-actions-wif'
-        service_account: 'github-actions@suspicious-project-381323.iam.gserviceaccount.com'
-
+        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        project_id: ${{ env.PROJECT_ID }}
+        export_default_credentials: true
 
     - name: Build Docker Image
       run: docker build -t $IMAGE_NAME:latest .
