--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -19,6 +19,12 @@ jobs:
         project_id: ${{ env.PROJECT_ID }}
         export_default_credentials: true
 
+    - name: Google Auth
+      id: auth
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.SERVICE_ACCOUNT_KEY }}'
+
     - name: Build Docker Image
       run: docker build -t $IMAGE_NAME:latest .
 
