--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -48,7 +48,7 @@ jobs:
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |-
-        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
-        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
-        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
-        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:latest
+        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:$GIT_TAG
+        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:latest
+        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:$GIT_TAG
