--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -49,7 +49,7 @@ jobs:
         docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:$GIT_TAG
 
     - name: Deploy to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@v0
+        uses: 'google-github-actions/deploy-cloudrun@v1'
         with:
           service: suspicious-api
           region: southamerica-east1
