--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -7,8 +7,8 @@ jobs:
     name: Build and Push to GCP
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: suspicious-api
-      PROJECT_ID: suspicious-project-381323
+      IMAGE_NAME: pet-charm-api
+      PROJECT_ID: pet-charm
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -41,14 +41,14 @@ jobs:
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |-
-        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:latest
-        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:$GIT_TAG
-        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:latest
-        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/suspicious/$IMAGE_NAME:$GIT_TAG
+        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
+        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
+        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
 
     - name: Deploy to Cloud Run
       uses: 'google-github-actions/deploy-cloudrun@v1'
       with:
-        service: suspicious-api
+        service: pet-charm-api
         region: southamerica-east1
-        image: southamerica-east1-docker.pkg.dev/suspicious-project-381323/suspicious/suspicious-api
+        image: southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME
