--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -41,14 +41,14 @@ jobs:
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |-
-        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
-        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
-        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
-        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/api-images/$IMAGE_NAME:latest
+        docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/api-images/$IMAGE_NAME:$GIT_TAG
+        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/api-images/$IMAGE_NAME:latest
+        docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/api-images/$IMAGE_NAME:$GIT_TAG
 
     - name: Deploy to Cloud Run
       uses: 'google-github-actions/deploy-cloudrun@v1'
       with:
         service: pet-charm-api
         region: southamerica-east1
-        image: southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME
+        image: southamerica-east1-docker.pkg.dev/$PROJECT_ID/api-images/$IMAGE_NAME
