--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -51,4 +51,4 @@ jobs:
       with:
         service: pet-charm-api
         region: southamerica-east1
-        image: southamerica-east1-docker.pkg.dev/pet-charm/api-images/pet-charm-api
+        image: southamerica-east1-docker.pkg.dev/pet-charm/api-images/pet-charm-api:latest
