--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -57,4 +57,4 @@ jobs:
         service: pet-charm-api
         region: southamerica-east1
         image: southamerica-east1-docker.pkg.dev/pet-charm/api-images/pet-charm-api:latest
-        env_vars_file: '../../.env'
+        env_vars_file: '../../env_vars.txt'
